5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1667_2326.log
== TEST (2019-04-16 17:12:26) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "gi"):
	msg = "GINA WEASLEY"
else:
	msg = "HARRY POTTER"
print(msg.upper())
-- OUTPUT:
HARRY POTTER
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:12:41) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "gi"):
	msg = "GINA WEASLEY"
else:
	msg = "HARRY POTTER"
print(msg.upper())
-- OUTPUT:
HARRY POTTER
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:12:53) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "gi"):
	msg = "GINA WEASLEY"
else:
	msg = "HARRY POTTER"
print(msg.upper())
-- EXECUTION TIME:
0.143503
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
HARRY POTTER
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
HARRY POTTER
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:12:56) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "gi"):
	msg = "GINA WEASLEY"
else:
	msg = "HARRY POTTER"
print(msg.upper())
-- OUTPUT:
HARRY POTTER
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:16:21) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == GINA):
	print(gi.upper())
else:
	print(ha.upper())
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(n == GINA):
NameError: name 'GINA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:16:46) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == GIna):
	print(gi.upper())
else:
	print(ha.upper())
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(n == GIna):
NameError: name 'GIna' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:19:37) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper):
	print(gi.upper())
else:
	print(ha.upper())
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(ha.upper())
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:20:08) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:20:14) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper):
	print(gi)
else:
	print(ha)
	

-- EXECUTION TIME:
0.150862
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
10.246786
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
10.246786
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:20:23) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:20:31) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:21:07) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:21:41) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:21:47) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- EXECUTION TIME:
0.19777
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
10.246786
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
88407.8266
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:21:50) 
-- CODE:
n = input("bruxo")
gi = 37654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:23:07) 
-- CODE:
n = input("bruxo")
gi = 3.7654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:23:14) 
-- CODE:
n = input("bruxo")
gi = 3.7654*2.3479
ha = 3.674*2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
10.246786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:26:53) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:27:02) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:27:08) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:44:09) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:44:33) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:45:34) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina.upper()"):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:45:39) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina.upper()"):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:46:59) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina.upper()"):
	print(gi)
else:
	print(ha)
	

-- OUTPUT:
1.3173180351380422
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:47:58) 
-- CODE:
n = input("bruxo")
gi = 3.7654/2.3479
ha = 3.674/2.789
if(n == "Gina".upper()):
	print(gi)
else:
	print(ha)
	

-- EXECUTION TIME:
0.149055
-- TEST CASE 1:
---- input:
HARRY
---- correct output:
1.3173180351380422
---- user output:
1.3173180351380422
-- TEST CASE 2:
---- input:
GINA
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
